--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,28 @@
-<h1>Hello</h1>
+<table class="table table-bordered">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">E-mail</th>
+      <th scope="col">Phone</th>
+      <th scope="col" class="text-end">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>email@email.com</td>
+      <td>213123123213</td>
+      <td>
+
+        <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i>View</a>
+        <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"></i>Edit</a>
+        <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i>Delete</a>
+
+      </td>
+    </tr>
+  </tbody>
+</table>
