--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,21 +1,22 @@
 <table class="table table-bordered">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">E-mail</th>
-      <th scope="col">Phone</th>
+      <th scope="col">ID</th>
+      <th scope="col">Email</th>
+      <th scope="col">FirstName</th>
+      <th scope="col">LastName</th>
+      <th scope="col">Birthdate</th>
       <th scope="col" class="text-end">Action</th>
     </tr>
   </thead>
   <tbody>
+    {{#each rows}}
     <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>email@email.com</td>
-      <td>213123123213</td>
+      <th scope="row">{{this.ID}}</th>
+      <td>{{this.Email}}</td>
+      <td>{{this.FirstName}}</td>
+      <td>{{this.LastName}}</td>
+      <td>{{this.Birthdate}}</td>
       <td>
 
         <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i>View</a>
@@ -24,5 +25,6 @@
 
       </td>
     </tr>
+    {{/each}}
   </tbody>
 </table>
