--- a/views/edit-user.hbs
+++ b/views/edit-user.hbs
@@ -1,11 +1,9 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">New User</li>
+        <li class="breadcrumb-item active" aria-current="page">Edit User</li>
     </ol>
 </nav>
-
-<h1>Add New User</h1>
 
 {{#if alert}}
 <div class="alert alert-success d-flex align-items-center" role="alert">
@@ -13,6 +11,8 @@
 </div>
 {{/if}}
 
-<form class="row g-3 needs-validation" method="POST" action="/adduser" novalidate>
+{{#each rows}}
+<form class="row g-3 needs-validation" method="POST" action="/edituser/{{this.ID}}" novalidate>
     {{> user-form}}
 </form>
+{{/each}}
