--- a/views/home.hbs
+++ b/views/home.hbs
@@ -30,7 +30,7 @@
       <td>
         <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i>View</a>
         <a href="/edituser/{{this.ID}}" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"></i>Edit</a>
-        <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i>Delete</a>
+        <a href="/{{this.ID}}" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i>Delete</a>
       </td>
     </tr>
     {{/each}}
