--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,8 @@
+{{#if removedUser}}
+<div class="alert alert-success d-flex align-items-center" role="alert">
+    User has been removed
+</div>
+{{/if}}
 
 <div class="row">
   <div class="col-6"><h1>Users</h1></div>
@@ -5,8 +10,6 @@
     <a href="/adduser" type="button" class="btn btn-primary align-self-center">+ Add user</a>
   </div>
 </div>
-
-
 
 <table class="table table-bordered">
   <thead class="thead-dark">
@@ -28,7 +31,7 @@
       <td>{{this.LastName}}</td>
       <td>{{this.Birthdate}}</td>
       <td>
-        <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i>View</a>
+        <a href="/viewuser/{{this.ID}}" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i>View</a>
         <a href="/edituser/{{this.ID}}" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"></i>Edit</a>
         <a href="/{{this.ID}}" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i>Delete</a>
       </td>
