--- a/views/partials/user-form.hbs
+++ b/views/partials/user-form.hbs
@@ -1,4 +1,15 @@
 <div class="col-md-6">
+
+    <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="floatingInput" value="{{this.FirstName}}" placeholder="First Name" name="first_name">
+        <label for="floatingInput">First Name</label>
+    </div>
+
+    <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="floatingInput" value="{{this.LastName}}" placeholder="Last Name" name="last_name">
+        <label for="floatingInput">Last Name</label>
+    </div>
+
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="floatingInput" value="{{this.Email}}" placeholder="Email" name="email">
         <label for="floatingInput">Email</label>
