--- a/views/reg-user.hbs
+++ b/views/reg-user.hbs
@@ -5,7 +5,7 @@
     </ol>
 </nav>
 
-<h1>Add New User</h1>
+<h1>Registration</h1>
 
 <form class="row g-3 needs-validation" method="POST" action="/registration" novalidate>
     {{> user-form}}
