--- a/views/login-user.hbs
+++ b/views/login-user.hbs
@@ -18,10 +18,12 @@
   </div>
 
   <!-- Submit button -->
-  <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+  <button type="submit" class="btn btn-primary btn-block mb-4">Login</button>
 
   <!-- Register buttons -->
   <div class="text-center">
     <p>Not a member? <a href="/registration">Register</a></p>
   </div>
 </form>
+
+<button id="loginExit" class="btn btn-primary btn-block mb-4">Exit</button>
