--- a/views/homeAdmin.hbs
+++ b/views/homeAdmin.hbs
@@ -8,22 +8,23 @@
 <table class="table table-bordered">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Email</th>
-      <th scope="col">FirstName</th>
-      <th scope="col">LastName</th>
-      <th scope="col">Birthdate</th>
-      <th scope="col" class="text-end">Action</th>
+      <th scope="col">Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Age</th>
+      <th scope="col">User Role</th>
+      <th scope="col">Email Address</th>
+      <th scope="col" class="text-end">Office</th>
     </tr>
   </thead>
   <tbody>
     {{#each rows}}
     <tr>
-      <th scope="row">{{this.ID}}</th>
-      <td>{{this.Email}}</td>
       <td>{{this.FirstName}}</td>
       <td>{{this.LastName}}</td>
       <td>{{this.Birthdate}}</td>
+      <td>{{this.RoleID}}</td>
+      <td>{{this.Email}}</td>
+      <td>{{this.OfficeID}}</td>
     </tr>
     {{/each}}
   </tbody>
