--- a/views/homeAdmin.hbs
+++ b/views/homeAdmin.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-6"><h1>Users</h1></div>
   <div class="col-6 d-flex justify-content-end">
-    <a href="/adduser" type="button" class="btn btn-primary align-self-center">+ Add user</a>
+    <a href="/addUserView" type="button" class="btn btn-primary align-self-center">+ Add user</a>
   </div>
 </div>
 
