--- a/views/login-user.hbs
+++ b/views/login-user.hbs
@@ -1,6 +1,18 @@
 {{#if alert}}
 <div class="alert alert-danger d-flex align-items-center" role="alert">
-    {{alert}}
+  {{alert}}
+</div>
+{{/if}}
+
+{{#if alertGood}}
+<div class="alert alert-success d-flex align-items-center" role="alert">
+  {{alertGood}}
+</div>
+{{/if}}
+
+{{#if alertBlocked}}
+<div class="alert alert-danger d-flex align-items-center" role="alert">
+  {{alertBlocked}}
 </div>
 {{/if}}
 
@@ -13,7 +25,7 @@
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" name="password"  />
+    <input type="password" id="form2Example2" class="form-control" name="password" />
     <label class="form-label" for="form2Example2">Password</label>
   </div>
 
@@ -26,4 +38,9 @@
   </div>
 </form>
 
-<button id="loginExit" class="btn btn-primary btn-block mb-4">Exit</button>
+
+<form class="row g-3" method="POST" action="/exit" novalidate>
+  <a href="https://google.com">
+    <button id="loginExit" class="btn btn-primary btn-block mb-4">Exit</button>
+  </a>
+</form>
