--- a/views/reg-user.hbs
+++ b/views/reg-user.hbs
@@ -1,15 +1,8 @@
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">New User</li>
-    </ol>
-</nav>
-
 <h1>Registration</h1>
 
-{{#if alert}}
+{{#if alertGood}}
 <div class="alert alert-success d-flex align-items-center" role="alert">
-    {{alert}}
+    {{alertGood}}
 </div>
 {{/if}}
 
