ADD: some styles

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,1 +1,39 @@
-@import 'components/_test'
+@import 'components/_fonts';
+@import 'components/_login';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    @include fontRegular
+}
+
+.container {
+    max-width: 720px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.nav{
+    background-color: #196AA6;
+    width: 100vw;
+    padding: 30px 0px 30px 30px;
+}
+
+.alert{
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.alert-success{
+    background-color: green
+}
+
+.alert-danger{
+    background-color: red
+}
