ADD: blocking time in login

--- a/public/scss/components/_login.scss
+++ b/public/scss/components/_login.scss
@@ -7,3 +7,16 @@
     @include fontBold;
     min-width: 100px;
 }
+
+#blockedError{
+    opacity: 0;
+}
+
+.blockedActive{
+    opacity: 1 !important;
+    transition: 0.4s !important;
+}
+
+.loginExitBlock{
+    pointer-events: none !important;
+}
