--- a/views/add-user.hbs
+++ b/views/add-user.hbs
@@ -1,8 +1,15 @@
-<h1>Add user</h1>
-
+<div class="admin-nav">
+  <a href="/homeAdmin">Home</a>
+  <a href="/addUserView" style="text-decoration: underline;">Add user</a>
+  <form class="row g-3" method="POST" action="/exit" novalidate>
+    <button type="submit">
+      <p>Exit</p>
+    </button>
+  </form>
+</div>
 {{#if alertSuccess}}
 <div class="alert alert-success d-flex align-items-center" role="alert">
-    {{alert}}
+    {{alertSuccess}}
 </div>
 {{/if}}
 
