--- a/views/homeAdmin.hbs
+++ b/views/homeAdmin.hbs
@@ -1,8 +1,11 @@
-<div class="row">
-  <div class="col-6"><h1>Users</h1></div>
-  <div class="col-6 d-flex justify-content-end">
-    <a href="/addUserView" type="button" class="btn btn-primary align-self-center">+ Add user</a>
-  </div>
+<div class="admin-nav">
+  <a href="/homeAdmin" style="text-decoration: underline;">Home</a>
+  <a href="/addUserView">Add user</a>
+  <form class="row g-3" method="POST" action="/exit" novalidate>
+    <button type="submit">
+      <p>Exit</p>
+    </button>
+  </form>
 </div>
 
 <table class="table table-bordered">
@@ -13,7 +16,9 @@
       <th scope="col">Age</th>
       <th scope="col">User Role</th>
       <th scope="col">Email Address</th>
-      <th scope="col" class="text-end">Office</th>
+      <th scope="col">Office</th>
+      <th scope="col">Active</th>
+      <th scope="col" class="text-end">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -22,9 +27,14 @@
       <td>{{this.FirstName}}</td>
       <td>{{this.LastName}}</td>
       <td>{{this.Birthdate}}</td>
-      <td>{{this.RoleID}}</td>
+      <td id="RoleID">{{this.RoleID}}</td>
       <td>{{this.Email}}</td>
       <td>{{this.OfficeID}}</td>
+      <td id="activeUser">{{this.Active}}</td>
+      <td>
+        <a href="/changeRole/{{this.ID}}" type="button">Change Role</a>
+        <a href="/blockUser/{{this.ID}}" type="button">Enable/Disable</a>
+      </td>
     </tr>
     {{/each}}
   </tbody>
