ADD: popup on login

--- a/views/login-user.hbs
+++ b/views/login-user.hbs
@@ -24,6 +24,22 @@
 
 <h1 class="page-title">Login</h1>
 
+  <div id="logPopup" class="popup">
+    <div id="logBg" class="bg"></div>
+    <div class="popup__body">
+      <div class="popup__content">
+        <a id="logCross" class="popup__close"><img src="../img/close.svg" alt="закрыть"></a>
+
+        <div class="popup__wrapper">
+          <p>No logout detected for your last login</p>
+
+          <p>Reason:</p>
+          <input>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <form method="POST" action="/">
   <!-- Email input -->
   <div class="form__input">
