--- a/public/scss/components/_login.scss
+++ b/public/scss/components/_login.scss
@@ -1,12 +1,74 @@
-#blockedError{
+#blockedError {
     opacity: 0;
 }
 
-.blockedActive{
+.blockedActive {
     opacity: 1 !important;
     transition: 0.4s !important;
 }
 
-.loginExitBlock{
+.loginExitBlock {
     pointer-events: none !important;
+}
+
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: #FFFFFF;
+    opacity: 0;
+    visibility: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all 0.2s ease 0s;
+    z-index: 901;
+
+    &__body {
+        min-height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 10px;
+        z-index: 20;
+    }
+
+    &__content {
+        background-color: #F7F7F7;
+        color: #000;
+        width: 700px;
+        padding: 25px 80px 0px 80px;
+        position: relative;
+        border-radius: 40px;
+    }
+
+
+    &__close {
+        position: absolute;
+        right: 25px;
+        top: 20px;
+        cursor: pointer;
+
+        & img {
+            width: 45px !important;
+            height: 45px !important;
+        }
+    }
+}
+
+.open {
+    opacity: 1 !important;
+    visibility: visible !important;
+}
+
+.bg {
+    background-color: rgba(0, 0, 0, 0.7);
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
 }
