--- a/public/scss/components/_login.scss
+++ b/public/scss/components/_login.scss
@@ -38,9 +38,25 @@
         background-color: #F7F7F7;
         color: #000;
         width: 700px;
-        padding: 25px 80px 0px 80px;
+        padding: 25px 80px 25px 80px;
         position: relative;
         border-radius: 40px;
+    }
+
+    &__wrapper {
+
+        & h1{
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        & p{
+            margin-bottom: 10px;
+        }
+
+        & input {
+            
+        }
     }
 
 
@@ -71,4 +87,15 @@
     width: 100%;
     height: 100%;
     z-index: 0;
+}
+
+.reason__input {
+    display: flex;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+
+    & input{
+        outline: none;
+    }
 }
