ADD: user page 1/2

--- a/views/homeUser.hbs
+++ b/views/homeUser.hbs
@@ -13,7 +13,7 @@
 <p>Hi {{this.FirstName}}, Welcome to AMONIC Airlines</p>
 <div class="user-stat">
     <p><strong>Time spent on system</strong>:  </p>
-    <p>Number of crashes: </p>]
+    <p>Number of crashes: {{this.crushes}}</p>
 </div>
 
 {{/each}}
