ADD: all time spend

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'components/_login';
 @import 'components/_homeAdmin';
 @import 'components/_addUser';
+@import 'components/homeUser';
 
 * {
     margin: 0;
