--- a/views/homeUser.hbs
+++ b/views/homeUser.hbs
@@ -12,7 +12,7 @@
 
 <p>Hi {{this.FirstName}}, Welcome to AMONIC Airlines</p>
 <div class="user-stat">
-    <p><strong>Time spent on system</strong>:  </p>
+    <p><strong>Time spent on system</strong>: <span id="user-stat-time"></span> min</p>
     <p>Number of crashes: {{this.crushes}}</p>
 </div>
 
