--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,6 +24,7 @@
 
     <script src="./js/login.js"></script>
     <script src="./js/homeAdmin.js"></script>
+    <script src="./js/homeUser.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
     </script>
