ADD: offices dropdown

--- a/public/scss/components/_homeAdmin.scss
+++ b/public/scss/components/_homeAdmin.scss
@@ -64,3 +64,18 @@ td{
     justify-content: center;
     align-items:center
 }
+
+.offices_dropdown{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    & p {
+        @include fontBold;
+        margin-right: 15px;
+    }
+
+    & select {
+        padding: 6px 12px;
+    }
+}
