--- a/views/homeUser.hbs
+++ b/views/homeUser.hbs
@@ -1,5 +1,6 @@
 <div class="admin-nav">
   <a href="/homeUser" style="text-decoration: underline;">Home</a>
+  <a href="/manageFlight">Flight Manager</a>
   <form class="row g-3" method="POST" action="/exit" novalidate>
     <button type="submit">
       <p>Exit</p>
