ADD: style on actions button manageFlight

--- a/views/manage-flight.hbs
+++ b/views/manage-flight.hbs
@@ -102,4 +102,23 @@
         </table>
     </div>
 
+    <div class="manageFlight_actions">
+        <div class="manageFlight_actions__edit">
+            <button>
+                <p>Change Flight</p>
+                <img src="../img/changeFlight.svg">
+            </button>
+
+            <button>
+                <p>Edit Flight</p>
+                <img src="../img/editFlight.svg">
+            </button>
+        </div>
+
+        <button class="manageFlight_actions__import">
+            <p>Import Changes</p>
+            <img src="../img/import.svg">
+        </button>
+    </div>
+
 </div>
