--- a/public/scss/components/_manageFlight.scss
+++ b/public/scss/components/_manageFlight.scss
@@ -44,4 +44,45 @@
         color: #FFFFFF;
         cursor: pointer;
     }
+
+    &_actions{
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &__edit {
+            display: flex;
+            align-items: center;
+        }
+
+        & button {
+            padding: 10px 22px;
+            width: 190px;
+            background: #F2EDFF;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
+            border-radius: 6px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #4815D4;
+            font-size: 16px;
+            font-weight: bold;
+
+            & p{
+                margin-right: 10px;
+            }
+
+            &:first-child {
+                margin-right: 30px;
+            }
+        }
+
+        &__import{ 
+            width: 200px !important; 
+            background: #196AA6 !important;
+            color: #FFFFFF !important;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
+        }
+    }
 }
