ADD: edit flight

--- a/views/cancelFlight.hbs
+++ b/views/cancelFlight.hbs
@@ -8,6 +8,8 @@
     </form>
 </div>
 
+<h1>Change confirmed info</h1>
+
 {{#if alert}}
 <div class="alert alert-success d-flex align-items-center" role="alert">
     {{alert}}
