--- a/views/manage-flight.hbs
+++ b/views/manage-flight.hbs
@@ -98,7 +98,7 @@
                     <td>${{this.FirstClassPrice}}</td>
                     <td id="isConfirmed">{{this.Confirmed}}</td>
                     <td>
-                        <a href="/cancelFlight/{{this.ID}}" type="button">Cancel Flight</a> <br>
+                        <a href="/cancelFlight/{{this.ID}}" type="button">Confirmed</a> <br>
                         <a href="/editFlight/{{this.ID}}" type="button">Edit Flight</a>
                     </td>     
                 </tr>
