--- a/views/manage-flight.hbs
+++ b/views/manage-flight.hbs
@@ -2,6 +2,7 @@
     <a href="/homeUser">Home</a>
     <a href="/manageFlight" style="text-decoration: underline;">Flight Manager</a>
     <a href="/searchForFlight">Search for flight</a>
+    <a href="/flightSatisfaction">Flight Satisfaction Survey Reports</a>
     <form class="row g-3" method="POST" action="/exit" novalidate>
         <button type="submit">
             <p>Exit</p>
