--- a/views/searchForFlight.hbs
+++ b/views/searchForFlight.hbs
@@ -2,6 +2,7 @@
     <a href="/homeUser">Home</a>
     <a href="/manageFlight">Flight Manager</a>
     <a href="/searchForFlight" style="text-decoration: underline;">Search for flight</a>
+    <a href="/flightSatisfaction">Flight Satisfaction Survey Reports</a>
     <form class="row g-3" method="POST" action="/exit" novalidate>
         <button type="submit">
             <p>Exit</p>
