ADD: wrapper flightSatisfaction

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'components/_addUser';
 @import 'components/homeUser';
 @import 'components/manageFlight';
+@import 'components/flightSatisfaction';
 
 * {
     margin: 0;
