--- a/views/flightSatisfaction.hbs
+++ b/views/flightSatisfaction.hbs
@@ -15,5 +15,79 @@
 
     <h1>Flight Satisfaction Survey Reports</h1>
 
-    <div class="flightSatisfaction"></div>
+    <a id="summaryResult" class="satisfaction_active">View Result Summary</a>
+    <a id="detailedResult">View Detailed Results</a>
+
+    <div class="flightSatisfaction_table">
+        <div class="flightSatisfaction_table__filter">
+            <p>Fieldwork: </p>
+            <p>Sample size: </p>
+        </div>
+
+        <form method="POST" action="/satisfactionMonth">
+            <select id="satisfactionDate" name="satisfactionDate">
+                    <option value="01">January</option>
+                    <option value="02">February</option>
+                    <option value="03">March</option>
+                    <option value="04">April</option>
+                    <option value="05">May</option>
+                    <option value="06">June</option>
+                    <option value="07">July</option>
+                    <option value="08">August</option>
+                    <option value="09">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+            </select>
+
+            <button type="submit">Submit</button>
+        </form>
+
+        <table class="table table-bordered flightSatisfaction_table__head">
+            <thead class="thead-dark">
+                <tr>
+                    <th colspan="2" scope="col">Gender</th>
+                    <th colspan="4" scope="col">Age</th>
+                    <th colspan="3" scope="col">Cabin Type</th>
+                    <th colspan="5" scope="col">Destination Airport</th>
+                </tr>
+
+                <tr>
+                    <th scope="col">Male</th>
+                    <th scope="col">Female</th>
+                    <th scope="col">18-24</th>
+                    <th scope="col">25-39</th>
+                    <th scope="col">40-59</th>
+                    <th scope="col">60+</th>
+                    <th scope="col">Economy</th>
+                    <th scope="col">Business</th>
+                    <th scope="col">First</th>
+                    <th scope="col">AUH</th>
+                    <th scope="col">BAH</th>
+                    <th scope="col">DOH</th>
+                    <th scope="col">RYU</th>
+                    <th scope="col">CAI</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr class="flightItem">
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                    <td>839</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
